--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
     <div class="container-lg msCycleContainer text-center rounded-lg mt-4 mb-3 p-4" id="info-collection-div">
         <p class="font-weight-bolder mb-0 text-center text-danger">Enter data below to get information regarding Menstrual Cycle</p>
-        <p class="font-weight-bold text-center text-primary mb-5">(We won't store any of your data)</p>
+        <p class="font-weight-bold text-center text-primary mb-5">(We don't store your data)</p>
         <form class="was-validated" action="#" id="ms-cycle-form">
             <div class="form-group">
                 <label for="start-menstruation" class="font-weight-bolder">
